gics/app/depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gics
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector: { }
  template:
    metadata:
      labels:
        app.life.uni-leipzig.de/redundancy: none
        app.life.uni-leipzig.de/service-level: silver
    spec:
      enableServiceLinks: false
      containers:
      - name: gics
        image: mosaicgreifswald/gics:2025.2.0@sha256:56ea729ddba0ab110c945b5bd649055406ef55bf2a3f9fe85932e88cbe09c75d
        ports:
        - name: http
          containerPort: 8080
        startupProbe:
          httpGet: &probe
            path: /gics/gicsService?wsdl
            port: http
          failureThreshold: 24
          periodSeconds: 10
        readinessProbe:
          httpGet: *probe
        livenessProbe:
          httpGet: *probe
        resources:
          requests:
            cpu: "125m"
            memory: "2Gi"
          limits:
            memory: "2Gi"
