gics/app/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gics
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector: { }
  template:
    metadata:
      labels:
        app.life.uni-leipzig.de/redundancy: none
        app.life.uni-leipzig.de/service-level: silver
    spec:
      enableServiceLinks: false
      containers:
      - name: gics
        image: mosaicgreifswald/gics:2025.2.0@sha256:56ea729ddba0ab110c945b5bd649055406ef55bf2a3f9fe85932e88cbe09c75d
        ports:
        - name: http
          containerPort: 8080
        startupProbe:
          httpGet: &probe
            path: /
            port: http
          failureThreshold: 24
          periodSeconds: 10
        readinessProbe:
          httpGet: *probe
        livenessProbe:
          httpGet: *probe
        resources:
          requests:
            cpu: "125m"
            memory: "3Gi"
          limits:
            memory: "3Gi"
        volumeMounts:
        - name: cacerts
          mountPath: /usr/lib/jvm/zulu21/lib/security/cacerts
          subPath: cacerts
          readOnly: true
        - name: wildfly-cli
          mountPath: /entrypoint-wildfly-cli/proxy-forwarding.cli
          subPath: proxy-forwarding.cli
          readOnly: true
      volumes:
      - name: ca-certs
        configMap:
          name: life-ca-certs
          items:
          - key: life-root-ca-2.pem
            path: life-root-ca-2.crt
      - name: cacerts
        emptyDir: { }
      - name: wildfly-cli
        configMap:
          name: wildfly-cli
