gics/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gics
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector: { }
