gics/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gics
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  rules:
  - host: gics.distance-xt.life.uni-leipzig.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gics
            port:
              name: http
